completed playlist backend and test code
